<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:background="#fff"
android:orientation="vertical"
android:weightSum="1"
android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:weightSum="1"
    android:layout_height="0dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.3"
        android:gravity="center_vertical"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="150dp"
                android:src="@drawable/maxlogo"
                android:layout_marginLeft="35dp"

                android:layout_height="150dp">

            </ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="bottom|center"
                android:visibility="gone"
                android:layout_height="match_parent">
                <Button
                    android:layout_width="wrap_content"
                    android:id="@+id/buttonSend"
                    android:text="done"
                    android:layout_height="wrap_content">

                </Button>
            </LinearLayout>

            <TextView
                android:layout_width="100dp"
                android:id="@+id/textView1"
                android:visibility="gone"
                android:layout_height="wrap_content">

            </TextView>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9600"
                android:id="@+id/checkBox"
                android:visibility="gone"
                android:checked="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/buttonSend"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="38400"
                android:visibility="gone"
                android:id="@+id/checkBox2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/buttonSend"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="1">

        <TextView
            android:id="@+id/droptrash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pleasedropthetrash"
            android:textColor="@color/green"
            android:textSize="35sp"
            android:textStyle="bold"
            android:visibility="gone">

        </TextView>

        <TextView
            android:id="@+id/trashtype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/checktrsah"
            android:textColor="@color/green"
            android:textSize="35sp"
            android:textStyle="bold"
            android:visibility="gone">

        </TextView>

        <TextView
            android:id="@+id/sorry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sorry"
            android:textColor="@color/green"
            android:textSize="35sp"
            android:textStyle="bold"
            android:visibility="gone">

        </TextView>

        <TextView
            android:id="@+id/trashvalidate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/validate"
            android:textColor="@color/green"
            android:textSize="35sp"
            android:textStyle="bold"
            android:visibility="gone">

        </TextView>

        <TextView
            android:id="@+id/more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/morepplastic"
            android:textColor="@color/green"
            android:textSize="35sp"
            android:textStyle="bold"
            android:visibility="gone">

        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="1"
            android:id="@+id/continuewithother"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.45"
                android:background="@drawable/buttonoutline"
                android:layout_height="100dp">
                <TextView
                    android:layout_width="match_parent"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    android:textColor="#CDDC39"
                    android:gravity="center"
                    android:text="@string/othertrash"
                    android:layout_height="match_parent">

                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="1"
            android:gravity="center"
            android:visibility="gone"
            android:id="@+id/donemain"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.45"
                android:background="@drawable/buttonoutline"
                android:layout_height="100dp">
                <TextView
                    android:layout_width="match_parent"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    android:textColor="#CDDC39"
                    android:gravity="center"
                    android:text="@string/done"
                    android:layout_height="match_parent">

                </TextView>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>

</LinearLayout>