<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorOrange"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:gravity="center"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:weightSum="1"
            android:orientation="vertical"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/liketodo"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="34sp"
                    android:layout_height="match_parent">

                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.27"
                android:gravity="center|top"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:id="@+id/english"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".55"
                    android:background="@color/green">

                    <TextView
                        android:id="@+id/ecash"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:onClick="Ecash"
                        android:text="@string/deposittrash"
                        android:textColor="@color/white"
                        android:textSize="34sp"
                        android:textStyle="bold">

                    </TextView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.27"
                android:gravity="center|top"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:id="@+id/hindi"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".55"
                    android:background="@color/green">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/usewallet"
                        android:textColor="@color/white"
                        android:textSize="34sp"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_height="100dp">

            <Button
                android:id="@+id/back"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:background="@color/green"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold">

            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>